--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             </div>
             <div class="footer-section footer-contact">
                 <h3>Contact Us</h3>
-                <p><i class="fas fa-map-marker-alt"></i> 123 Campus Street, University Area</p>
+                <p><i class="fas fa-map-marker-alt"></i> VIT Bhopal, Astha</p>
                 <p><i class="fas fa-phone"></i> +1 234 567 8900</p>
                 <p><i class="fas fa-envelope"></i> info@hosteldelights.com</p>
                 <p><i class="fas fa-clock"></i> Mon-Sun: 10:00 AM - 11:00 PM</p>
