contact page, menu page made and some connected to other pages

--- a/cart_index.html
+++ b/cart_index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - Hostel Delights</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="Pictures/logo.jpg">
     <style>
         /* Global styles */
         * {
@@ -564,9 +565,9 @@
         </div>
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fas fa-utensils"></i> Menu</a></li>
-            <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="#"><i class="fas fa-phone"></i> Contact</a></li>
+            <li><a href="menu.html"><i class="fas fa-utensils"></i> Menu</a></li>
+            <!-- <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li> -->
+            <li><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
             <li><a href="cart_index.html" class="active"><i class="fas fa-shopping-cart"></i> Cart <span id="nav-cart-count">(0)</span></a></li>
             <li><a href="#"><i class="fas fa-user"></i> Account</a></li>
         </ul>
@@ -642,8 +643,8 @@
                 <h3>Quick Links</h3>
                 <a href="index.html">Home</a>
                 <a href="#">Menu</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
+                <!-- <a href="#">About Us</a> -->
+                <a href="contact.html">Contact</a>
                 <a href="#">Terms & Conditions</a>
                 <a href="#">Privacy Policy</a>
             </div>
