--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Website</title>
+    <link rel="icon" href="Pictures/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Global styles */
@@ -559,9 +560,9 @@
         </div>
         <ul>
             <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fas fa-utensils"></i> Menu</a></li>
-            <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="#"><i class="fas fa-phone"></i> Contact</a></li>
+            <li><a href="menu.html"><i class="fas fa-utensils"></i> Menu</a></li>
+            <!-- <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li> -->
+            <li><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
             <li><a href="cart_index.html"><i class="fas fa-shopping-cart"></i> Cart <span id="nav-cart-count">(0)</span></a></li>            <li><a href="#"><i class="fas fa-user"></i> Account</a></li>
         </ul>
     </nav>
@@ -676,10 +677,10 @@
             </div>
             <div class="footer-section footer-links">
                 <h3>Quick Links</h3>
-                <a href="#">Home</a>
-                <a href="#">Menu</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
+                <a href="index.html">Home</a>
+                <a href="menu.html">Menu</a>
+                <!-- <a href="#">About Us</a> -->
+                <a href="contact.html">Contact</a>
                 <a href="#">Terms & Conditions</a>
                 <a href="#">Privacy Policy</a>
             </div>
