--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Delights - Contact</title>
+    <title>Hostel BItes - Contact</title>
     <link rel="icon" href="Pictures/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -503,8 +503,8 @@
                     </div>
                     <div class="contact-text">
                         <h3>Email Address</h3>
-                        <p>info@hosteldelights.com</p>
-                        <p>support@hosteldelights.com</p>
+                        <p>info@hostelBItes.com</p>
+                        <p>support@hostelBItes.com</p>
                     </div>
                 </div>
 
@@ -557,7 +557,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>About Us</h3>
-                <p>Hostel Delights is dedicated to bringing you the most delicious and affordable meals right to your hostel room. We understand student life and strive to make your dining experience exceptional.</p>
+                <p>Hostel BItes is dedicated to bringing you the most delicious and affordable meals right to your hostel room. We understand student life and strive to make your dining experience exceptional.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -578,12 +578,12 @@
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> VIT Bhopal, Astha</p>
                 <p><i class="fas fa-phone"></i> +1 234 567 8900</p>
-                <p><i class="fas fa-envelope"></i> info@hosteldelights.com</p>
+                <p><i class="fas fa-envelope"></i> info@hostelBItes.com</p>
                 <p><i class="fas fa-clock"></i> Mon-Sun: 10:00 AM - 11:00 PM</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Hostel Delights. All rights reserved.</p>
+            <p>&copy; 2025 Hostel BItes. All rights reserved.</p>
         </div>
     </footer>
 
