--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     <div class="container">
         <!-- Header -->
         <header>
-            <h1>Hostel BItes</h1>
+            <h1>Hostel Bites</h1>
             <p>Delicious food delivered straight to your hostel room</p>
         </header>
 
@@ -667,7 +667,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>About Us</h3>
-                <p>Hostel BItes is dedicated to bringing you the most delicious and affordable meals right to your hostel room. We understand student life and strive to make your dining experience exceptional.</p>
+                <p>Hostel Bites is dedicated to bringing you the most delicious and affordable meals right to your hostel room. We understand student life and strive to make your dining experience exceptional.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -688,12 +688,12 @@
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> VIT Bhopal, Astha</p>
                 <p><i class="fas fa-phone"></i> +1 234 567 8900</p>
-                <p><i class="fas fa-envelope"></i> info@hostelBItes.com</p>
+                <p><i class="fas fa-envelope"></i> info@hostelBites.com</p>
                 <p><i class="fas fa-clock"></i> Mon-Sun: 10:00 AM - 11:00 PM</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Hostel BItes. All rights reserved.</p>
+            <p>&copy; 2025 Hostel Bites. All rights reserved.</p>
         </div>
     </footer>
 
