--- a/cart_index.html
+++ b/cart_index.html
@@ -587,7 +587,7 @@
                 <i class="fas fa-shopping-cart"></i>
                 <h3>Your cart is empty</h3>
                 <p>Looks like you haven't added any items to your cart yet.</p>
-                <a href="index.html" class="btn">Start Shopping</a>
+                <a href="menu.html" class="btn">Start Shopping</a>
             </div>
 
             <!-- Cart items - shown when cart has items -->
