--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
             <h2 class="section-title">Popular Items</h2>
             <div class="featured-items">
                 <div class="featured-item">
-                    <img src="/api/placeholder/280/200" alt="Food item 1">
+                    <img src="Pictures/BBQ Pulled Veg Burger.jpg" alt="Food item 1">
                     <div class="featured-content">
                         <h3>Classic Burger</h3>
                         <p>Juicy beef patty with fresh vegetables and our special sauce</p>
@@ -601,7 +601,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="/api/placeholder/280/200" alt="Food item 2">
+                    <img src="Pictures/Margherita Pizza.jpg" alt="Food item 2">
                     <div class="featured-content">
                         <h3>Margherita Pizza</h3>
                         <p>Classic pizza with tomato sauce, mozzarella, and fresh basil</p>
@@ -612,7 +612,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="/api/placeholder/280/200" alt="Food item 3">
+                    <img src="Pictures/Chicken Wings.jpeg" alt="Food item 3">
                     <div class="featured-content">
                         <h3>Chicken Wings</h3>
                         <p>Crispy wings tossed in your choice of sauce with a side of fries</p>
@@ -623,7 +623,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="/api/placeholder/280/200" alt="Food item 4">
+                    <img src="Pictures/veggie bowl.jpeg" alt="Food item 4">
                     <div class="featured-content">
                         <h3>Veggie Bowl</h3>
                         <p>Fresh mixed vegetables with quinoa and our signature dressing</p>
@@ -641,22 +641,22 @@
             <h2 class="section-title">Our Food Gallery</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 1">
+                    <img src="Pictures/Hakka Noodles.jpg" alt="Food gallery 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 2">
+                    <img src="Pictures/Fried Rice.jpg" alt="Food gallery 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 3">
+                    <img src="Pictures/Butter Chicken.jpg" alt="Food gallery 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 4">
+                    <img src="Pictures/Idli Sambhar.jpg" alt="Food gallery 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 5">
+                    <img src="Pictures/Oreo Shake.jpg" alt="Food gallery 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/200/200" alt="Food gallery 6">
+                    <img src="Pictures/Samosa.jpg" alt="Food gallery 6">
                 </div>
             </div>
         </section>
