--- a/cart_index.html
+++ b/cart_index.html
@@ -122,7 +122,7 @@
             width: calc(100% - 220px);
             padding: 40px;
             transition: var(--transition);
-            min-height: 100vh;
+            /* min-height: 100vh; */
         }
 
         /* Header */
