delivery page added, integrated to fetch data from firebase cloud database

--- a/menu.html
+++ b/menu.html
@@ -448,7 +448,7 @@
             <img src="Pictures/logo.jpg" alt="Website Logo" class="logo">
         </div>
         <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="index_order.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="menu.html" class="active"><i class="fas fa-utensils"></i> Menu</a></li>
             <li><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
             <li><a href="cart_index.html"><i class="fas fa-shopping-cart"></i> Cart <span id="nav-cart-count">(0)</span></a></li>
@@ -1319,7 +1319,7 @@
             </div>
             <div class="footer-section footer-links">
                 <h3>Quick Links</h3>
-                <a href="index.html">Home</a>
+                <a href="index_order.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="contact.html">Contact</a>
                 <a href="cart_index.html">Cart</a>
