--- a/checkout.html
+++ b/checkout.html
@@ -773,7 +773,7 @@
             <img src="Pictures/logo.jpg" alt="Website Logo" class="logo">
         </div>
         <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="index_order.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="menu.html"><i class="fas fa-utensils"></i> Menu</a></li>
             <!-- <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li> -->
             <li><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
