corrected the directory structure

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostel Bites - Welcome</title>
-    <link rel="icon" href="Pictures/logo.jpg">
+    <link rel="icon" href="../assets/images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Global styles */
@@ -302,7 +302,7 @@
     <!-- Header -->
     <header>
         <div class="logo-container">
-            <img src="Pictures/logo.jpg" alt="Hostel Bites Logo" class="logo">
+            <img src="../assets/images/logo.jpg" alt="Hostel Bites Logo" class="logo">
             <div class="brand-name">Hostel Bites</div>
         </div>
         <nav>
@@ -324,7 +324,7 @@
         <div class="options-grid">
             <!-- Order Option -->
             <div class="option-card">
-                <img src="Pictures/delicious.png" alt="Order Food" class="option-image">
+                <img src="../assets/images/delicious.png" alt="Order Food" class="option-image">
                 <div class="option-content">
                     <div>
                         <h2><i class="fas fa-utensils"></i> Order Food</h2>
@@ -336,7 +336,7 @@
 
             <!-- Delivery Option -->
             <div class="option-card">
-                <img src="Pictures/delivery.jpeg" alt="Delivery" class="option-image">
+                <img src="../assets/images/delivery.jpeg" alt="Delivery" class="option-image">
                 <div class="option-content">
                     <div>
                         <h2><i class="fas fa-motorcycle"></i> Manage Deliveries</h2>
