--- a/public/pages/checkout.html
+++ b/public/pages/checkout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order - Hostel Bites</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="Pictures/logo.jpg">
+    <link rel="icon" href="../assets/images/logo.jpg">
     <style>
         /* Global styles */
         * {
@@ -770,7 +770,7 @@
     <!-- Navigation bar -->
     <nav id="sideNav">
         <div class="logo-container">
-            <img src="Pictures/logo.jpg" alt="Website Logo" class="logo">
+            <img src="../assets/images/logo.jpg" alt="Website Logo" class="logo">
         </div>
         <ul>
             <li><a href="index_order.html"><i class="fas fa-home"></i> Home</a></li>
@@ -993,7 +993,7 @@
                 </div>
             </div>
 
-<script src="script.js"></script>
+<script src="public/js/public/js/public/js/script.js"></script>
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
@@ -1021,7 +1021,7 @@
 </script>
 
 <!-- Your order processing script -->
-<script src="order.js"></script>
+<script src="/public/js/order.js"></script>
 
 </body>
 </html>
