--- a/public/pages/index_order.html
+++ b/public/pages/index_order.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Website</title>
-    <link rel="icon" href="Pictures/logo.jpg">
+    <link rel="icon" href="../assets/images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Global styles */
@@ -556,7 +556,7 @@
     <!-- Navigation bar -->
     <nav id="sideNav">
         <div class="logo-container">
-            <img src="Pictures/logo.jpg" alt="Website Logo" class="logo">
+            <img src="../assets/images/logo.jpg" alt="Website Logo" class="logo">
         </div>
         <ul>
             <li><a href="index_order.html" class="active"><i class="fas fa-home"></i> Home</a></li>
@@ -577,7 +577,7 @@
 
         <!-- Hero section -->
         <section class="hero">
-            <img src="Pictures/delicious.png" alt="Delicious food" class="hero-image">
+            <img src="../assets/images/delicious.png" alt="Delicious food" class="hero-image">
             <div class="hero-overlay">
                 <h2>Satisfy Your Cravings</h2>
                 <p>Enjoy a wide variety of delicious meals delivered right to your door. Fast delivery, hot food, and amazing taste guaranteed!</p>
@@ -590,7 +590,7 @@
             <h2 class="section-title">Popular Items</h2>
             <div class="featured-items">
                 <div class="featured-item">
-                    <img src="Pictures/BBQ Pulled Veg Burger.jpg" alt="Food item 1">
+                    <img src="../assets/images/BBQ Pulled Veg Burger.jpg" alt="Food item 1">
                     <div class="featured-content">
                         <h3>Classic Burger</h3>
                         <p>Juicy beef patty with fresh vegetables and our special sauce</p>
@@ -601,7 +601,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="Pictures/Margherita Pizza.jpg" alt="Food item 2">
+                    <img src="../assets/images/Margherita Pizza.jpg" alt="Food item 2">
                     <div class="featured-content">
                         <h3>Margherita Pizza</h3>
                         <p>Classic pizza with tomato sauce, mozzarella, and fresh basil</p>
@@ -612,7 +612,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="Pictures/Chicken Wings.jpeg" alt="Food item 3">
+                    <img src="../assets/images/Chicken Wings.jpeg" alt="Food item 3">
                     <div class="featured-content">
                         <h3>Chicken Wings</h3>
                         <p>Crispy wings tossed in your choice of sauce with a side of fries</p>
@@ -623,7 +623,7 @@
                     </div>
                 </div>
                 <div class="featured-item">
-                    <img src="Pictures/veggie bowl.jpeg" alt="Food item 4">
+                    <img src="../assets/images/veggie bowl.jpeg" alt="Food item 4">
                     <div class="featured-content">
                         <h3>Veggie Bowl</h3>
                         <p>Fresh mixed vegetables with quinoa and our signature dressing</p>
@@ -641,22 +641,22 @@
             <h2 class="section-title">Our Food Gallery</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Pictures/Hakka Noodles.jpg" alt="Food gallery 1">
+                    <img src="../assets/images/Hakka Noodles.jpg" alt="Food gallery 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="Pictures/Fried Rice.jpg" alt="Food gallery 2">
+                    <img src="../assets/images/Fried Rice.jpg" alt="Food gallery 2">
                 </div>
                 <div class="gallery-item">
-                    <img src="Pictures/Butter Chicken.jpg" alt="Food gallery 3">
+                    <img src="../assets/images/Butter Chicken.jpg" alt="Food gallery 3">
                 </div>
                 <div class="gallery-item">
-                    <img src="Pictures/Idli Sambhar.jpg" alt="Food gallery 4">
+                    <img src="../assets/images/Idli Sambhar.jpg" alt="Food gallery 4">
                 </div>
                 <div class="gallery-item">
-                    <img src="Pictures/Oreo Shake.jpg" alt="Food gallery 5">
+                    <img src="../assets/images/Oreo Shake.jpg" alt="Food gallery 5">
                 </div>
                 <div class="gallery-item">
-                    <img src="Pictures/Samosa.jpg" alt="Food gallery 6">
+                    <img src="../assets/images/Samosa.jpg" alt="Food gallery 6">
                 </div>
             </div>
         </section>
@@ -697,7 +697,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/public/js/script.js"></script>
 
 <!-- Toast notification -->
 <div class="toast" id="toast">
