corrected errors in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostel Bites - Welcome</title>
-    <link rel="icon" href="../assets/images/logo.jpg">
+    <link rel="icon" href="/assets/images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Global styles */
@@ -324,25 +324,25 @@
         <div class="options-grid">
             <!-- Order Option -->
             <div class="option-card">
-                <img src="../assets/images/delicious.png" alt="Order Food" class="option-image">
+                <img src="/public/assets/images/delicious.png" alt="Order Food" class="option-image">
                 <div class="option-content">
                     <div>
                         <h2><i class="fas fa-utensils"></i> Order Food</h2>
                         <p>Browse our menu, place an order, and get delicious food delivered right to your hostel room. Satisfy your cravings in just a few clicks!</p>
                     </div>
-                    <a href="index_order.html" class="btn">Go to Order Page</a>
+                    <a href="/public/pages/index_order.html" class="btn">Go to Order Page</a>
                 </div>
             </div>
 
             <!-- Delivery Option -->
             <div class="option-card">
-                <img src="../assets/images/delivery.jpeg" alt="Delivery" class="option-image">
+                <img src="/public/assets/images/delivery.jpeg" alt="Delivery" class="option-image">
                 <div class="option-content">
                     <div>
                         <h2><i class="fas fa-motorcycle"></i> Manage Deliveries</h2>
                         <p>For delivery person: Track, manage, and update delivery status of orders. Log in to access your assigned deliveries and service information.</p>
                     </div>
-                    <a href="delivery.html" class="btn">Go to Delivery Page</a>
+                    <a href="/public/pages/delivery.html" class="btn">Go to Delivery Page</a>
                 </div>
             </div>
         </div>
