--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <!-- Header -->
     <header>
         <div class="logo-container">
-            <img src="./images/logo.jpg" alt="Hostel Bites Logo" class="logo">
+            <img src="./public/assets/imageslogo.jpg" alt="Hostel Bites Logo" class="logo">
             <div class="brand-name">Hostel Bites</div>
         </div>
         <nav>
@@ -336,13 +336,13 @@
 
             <!-- Delivery Option -->
             <div class="option-card">
-                <img src="./images/delivery.jpeg" alt="Delivery" class="option-image">
+                <img src="./public/assets/images/delivery.jpeg" alt="Delivery" class="option-image">
                 <div class="option-content">
                     <div>
                         <h2><i class="fas fa-motorcycle"></i> Manage Deliveries</h2>
                         <p>For delivery person: Track, manage, and update delivery status of orders. Log in to access your assigned deliveries and service information.</p>
                     </div>
-                    <a href="./delivery.html" class="btn">Go to Delivery Page</a>
+                    <a href="./public/pages/delivery.html" class="btn">Go to Delivery Page</a>
                 </div>
             </div>
         </div>
