--- a/public/pages/menu.html
+++ b/public/pages/menu.html
@@ -1344,7 +1344,7 @@
         <i class="fas fa-check-circle"></i>
         <span id="toast-message">Item added to cart!</span>
     </div>
-    <script src="./public/js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
