path issue corrected for all

--- a/public/pages/cart_index.html
+++ b/public/pages/cart_index.html
@@ -671,6 +671,6 @@
     </footer>
 
     <!-- Link to our script file -->
-    <script src="./public/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
