--- a/public/pages/index_order.html
+++ b/public/pages/index_order.html
@@ -697,7 +697,7 @@
         </div>
     </footer>
 
-    <script src="/public/js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 <!-- Toast notification -->
 <div class="toast" id="toast">
