--- a/public/pages/checkout.html
+++ b/public/pages/checkout.html
@@ -993,7 +993,7 @@
                 </div>
             </div>
 
-<script src="public/js/public/js/public/js/script.js"></script>
+
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
@@ -1020,8 +1020,10 @@
   const db = firebase.firestore();
 </script>
 
-<!-- Your order processing script -->
-<script src="/public/js/order.js"></script>
+<!-- other script files linked -->
+<script src="../js/script.js"></script>
+<script src="../js/order.js"></script>
 
 </body>
 </html>
+
